2015-04-07  Corinna Vinschen  <corinna@vinschen.de>

	* tty.h (class tty): Remove unused 32/64 bit interoperability
	considerations.

2015-04-07  Corinna Vinschen  <corinna@vinschen.de>

	* tty.h (NTTYS): Raise to 128.
	* devices.in: Change pty, ptym, and cons expressions accordingly.
	* devices.cc: Regenerate.

2015-04-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* Makefile.in : Remove setting -fomit-frame-pointer for compiling
	various files, it is already the default.  Set
	-fno-omit-frame-pointer for exceptions.cc on x86.

2015-04-03  Takashi Yano  <takashi.yano@nifty.ne.jp>

	* fhandler_tty.cc (fhandler_pty_slave::read): Change calculation of
	"readlen" not to use "bytes_in_pipe" value directly.

2015-04-02  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/cygwin/signal.h (struct __mcontext): 16-byte align.
	* include/sys/ucontext.h (ucontext_t): Ditto.

2015-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/types.h: Include sys/_stdint.h rather than stdint.h.
	* include/stdint.h: Drop in favor of newlib version.
	* include/inttypes.h: Ditto.

2015-04-01  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/sys/ucontext.h : New header.
	* include/ucontext.h : Ditto.
	* exceptions.cc (call_signal_handler): Provide ucontext_t
	parameter to signal handler function.

2015-04-01  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* external.cc (cygwin_internal): Add operation to retrieve a copy
	of the EXCEPTION_RECORD from a siginfo_t *.
	* include/sys/cygwin.h (cygwin_getinfo_types): Ditto.
	* exception.h (cygwin_exception): Add exception_record accessor.

2015-04-01  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/cygwin/signal.h : Rename struct ucontext to struct
	__mcontext.  Fix layout differences from the Win32 API CONTEXT
	type.  Remove unused member _internal.  Rename member which
	corresponds to ContextFlags.  Add cr2 member.

2015-04-01  Corinna Vinschen  <corinna@vinschen.de>
